# cpp-libawait

./: .gitignore  .gitmodules  .travis.yml  BUILD  CMakeLists.txt  DEPS  Makefile  README.md  cpp-libawait.sln  cpp-libawait.vcxproj  cpp-libawait.vcxproj.filters
await/: cancel.h  coroutine.h  fiber.h  result.cpp  result.h  run.h  task.cpp  task.h  tcp.h  timer.h
await/detail/: command.h  command_impl.h  command_intf.h  command_ptr.h  command_ptr_fwd.h  command_ptr_impl.h  intrusive_list.h  linux_error.h  linux_fd_task.cpp  linux_run.cpp  linux_scheduler.h  linux_tcp.cpp  linux_timer.cpp  loop_impl.h  parallel.cpp  result.cpp  result_impl.h  result_kind.h  run_impl.cpp  run_impl.h  simple_commands.cpp  simple_commands.h  stream.cpp  task.cpp  task_access.h  task_fwd.h  task_impl.h  task_storage.h  task_traits.h  task_traits_impl.h  task_utils_fwd.h  task_utils_impl.h  task_vtable.cpp  task_vtable.h  then_impl.h  then_traits.h  unit.h  win32_error.cpp  win32_error.h  win32_fiber.cpp  (+4 more)
include/avakar/: meta.h
include/avakar/await/: cancel.h  coroutine.h  monostate.h  result.h  run.h  stream.h  task.h  tcp.h
src/: command.h  command_intf.h  command_ptr_fwd.h  command_ptr_impl.h  intrusive_list.h  linux_fd_task.cpp  linux_fd_task.h  linux_fiber.cpp  linux_run.cpp  linux_scheduler.h  linux_tcp.cpp  linux_timer.cpp  meta.h  meta_impl.h  parallel.cpp  result.cpp  result_impl.h  result_traits.h  run_impl.h  stream.cpp  task.cpp  task_fwd.h  task_impl.h  task_storage.h  task_traits.h  then_impl.h  variant_storage.h  win32_error.cpp  win32_fiber.cpp  win32_run.cpp  win32_scheduler.h  win32_tcp.cpp  win32_timer.cpp
test/: fiber_test.cpp  libawait-test.vcxproj  libawait-test.vcxproj.filters  main.cpp  mockobject.h  parallel_test.cpp  result.cpp  result_test.cpp  task.cpp  task_test.cpp  tcp_test.cpp  then.cpp  then_test.cpp  timer.cpp  timer_test.cpp
